# FXPF

./: .gitignore  AUTHORS  INSTALL  LPconstructor.c  LPconstructor.h  Makefile.am  README  README.md  README.rst  config.h  config.h.in  configure.ac  filter.c  filter.h  fxpf.c  fxpf.h  fxpf_test.c  matrixalg.c  matrixalg.h  mpfi_matrixalg.c  mpfi_matrixalg.h  setup.py
examples/: DL_Cor.txt  RAIM1_output_exact.txt  RAIM1_output_quantized.txt  RAIM_input1.txt  RAIM_input5.txt  RandSS.txt  RandSS_small.txt  SDR.txt  SDR_output.txt  info.txt  input2.txt  input3_f53bits.txt  input_article.txt  input_u_test2.txt  koko.txt  output.txt  output_DL_Cor.txt  output_RAIM.txt  output_RandSS.txt  output_RandSS_new.txt  output_test1.txt  output_test2.txt  output_test_slides.txt  simple.txt  test1.txt  test2.txt  test2_output_exact.txt  test2_output_quantized.txt  test_RAIM.txt  test_RAIM_WCPG_output.txt  test_article.txt  test_slides.txt  test_slides_input.txt  test_slides_output_exact.txt  test_thesis5.txt  test_thesis6.txt  test_thesis6_output.txt  thesis_nasty.txt  xilinx.txt  xilinx_output.txt
fixif.FXPF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fixif/FXPF/: FXPF.py  __init__.py
fixif/FXPF/test/: test_fxpf.py
fixif/FXPF/test/.cache/v/cache/: lastfailed
